--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #b1c5ff;
-@define-color accent_fg_color #002c71;
-@define-color accent_bg_color #b1c5ff;
-@define-color window_bg_color #131313;
-@define-color window_fg_color #e2e2e2;
-@define-color headerbar_bg_color #131313;
-@define-color headerbar_fg_color #e2e2e2;
-@define-color popover_bg_color #131313;
-@define-color popover_fg_color #e2e2e2;
-@define-color view_bg_color #131313;
-@define-color view_fg_color #e2e2e2;
-@define-color card_bg_color #131313;
-@define-color card_fg_color #e2e2e2;
+@define-color accent_color #80d5d3;
+@define-color accent_fg_color #003736;
+@define-color accent_bg_color #80d5d3;
+@define-color window_bg_color #0e1514;
+@define-color window_fg_color #dde4e3;
+@define-color headerbar_bg_color #0e1514;
+@define-color headerbar_fg_color #dde4e3;
+@define-color popover_bg_color #0e1514;
+@define-color popover_fg_color #dde4e3;
+@define-color view_bg_color #0e1514;
+@define-color view_fg_color #dde4e3;
+@define-color card_bg_color #0e1514;
+@define-color card_fg_color #dde4e3;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
