--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #faacf9;
-@define-color accent_fg_color #521458;
-@define-color accent_bg_color #faacf9;
-@define-color window_bg_color #131313;
-@define-color window_fg_color #e2e2e2;
-@define-color headerbar_bg_color #131313;
-@define-color headerbar_fg_color #e2e2e2;
-@define-color popover_bg_color #131313;
-@define-color popover_fg_color #e2e2e2;
-@define-color view_bg_color #131313;
-@define-color view_fg_color #e2e2e2;
-@define-color card_bg_color #131313;
-@define-color card_fg_color #e2e2e2;
+@define-color accent_color #00e0b2;
+@define-color accent_fg_color #00382a;
+@define-color accent_bg_color #00e0b2;
+@define-color window_bg_color #0a1611;
+@define-color window_fg_color #d8e6de;
+@define-color headerbar_bg_color #0a1611;
+@define-color headerbar_fg_color #d8e6de;
+@define-color popover_bg_color #0a1611;
+@define-color popover_fg_color #d8e6de;
+@define-color view_bg_color #0a1611;
+@define-color view_fg_color #d8e6de;
+@define-color card_bg_color #0a1611;
+@define-color card_fg_color #d8e6de;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
