--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #00e0b2;
-@define-color accent_fg_color #00382a;
-@define-color accent_bg_color #00e0b2;
-@define-color window_bg_color #0a1611;
-@define-color window_fg_color #d8e6de;
-@define-color headerbar_bg_color #0a1611;
-@define-color headerbar_fg_color #d8e6de;
-@define-color popover_bg_color #0a1611;
-@define-color popover_fg_color #d8e6de;
-@define-color view_bg_color #0a1611;
-@define-color view_fg_color #d8e6de;
-@define-color card_bg_color #0a1611;
-@define-color card_fg_color #d8e6de;
+@define-color accent_color #4ddad8;
+@define-color accent_fg_color #003736;
+@define-color accent_bg_color #4ddad8;
+@define-color window_bg_color #0c141b;
+@define-color window_fg_color #dbe3ed;
+@define-color headerbar_bg_color #0c141b;
+@define-color headerbar_fg_color #dbe3ed;
+@define-color popover_bg_color #0c141b;
+@define-color popover_fg_color #dbe3ed;
+@define-color view_bg_color #0c141b;
+@define-color view_fg_color #dbe3ed;
+@define-color card_bg_color #0c141b;
+@define-color card_fg_color #dbe3ed;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
