--- a/config/gtk-4.0/gtk.css
+++ b/config/gtk-4.0/gtk.css
@@ -4,19 +4,19 @@
 */
 
 @media (prefers-color-scheme: light) {
-    @define-color accent_color #006b54;
+    @define-color accent_color #006a69;
     @define-color accent_fg_color #ffffff;
-    @define-color accent_bg_color #006b54;
-    @define-color window_bg_color #effdf5;
-    @define-color window_fg_color #121e1a;
-    @define-color headerbar_bg_color #cfddd6;
-    @define-color headerbar_fg_color #121e1a;
-    @define-color popover_bg_color #cfddd6;
-    @define-color popover_fg_color #121e1a;
-    @define-color view_bg_color #effdf5;
-    @define-color view_fg_color #121e1a;
-    @define-color card_bg_color #effdf5;
-    @define-color card_fg_color #121e1a;
+    @define-color accent_bg_color #006a69;
+    @define-color window_bg_color #f7f9ff;
+    @define-color window_fg_color #151c24;
+    @define-color headerbar_bg_color #d3dbe5;
+    @define-color headerbar_fg_color #151c24;
+    @define-color popover_bg_color #d3dbe5;
+    @define-color popover_fg_color #151c24;
+    @define-color view_bg_color #f7f9ff;
+    @define-color view_fg_color #151c24;
+    @define-color card_bg_color #f7f9ff;
+    @define-color card_fg_color #151c24;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
@@ -24,19 +24,19 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    @define-color accent_color #00e0b2;
-    @define-color accent_fg_color #00382a;
-    @define-color accent_bg_color #00e0b2;
-    @define-color window_bg_color #0a1611;
-    @define-color window_fg_color #d8e6de;
-    @define-color headerbar_bg_color #0a1611;
-    @define-color headerbar_fg_color #d8e6de;
-    @define-color popover_bg_color #0a1611;
-    @define-color popover_fg_color #d8e6de;
-    @define-color view_bg_color #0a1611;
-    @define-color view_fg_color #d8e6de;
-    @define-color card_bg_color #0a1611;
-    @define-color card_fg_color #d8e6de;
+    @define-color accent_color #4ddad8;
+    @define-color accent_fg_color #003736;
+    @define-color accent_bg_color #4ddad8;
+    @define-color window_bg_color #0c141b;
+    @define-color window_fg_color #dbe3ed;
+    @define-color headerbar_bg_color #0c141b;
+    @define-color headerbar_fg_color #dbe3ed;
+    @define-color popover_bg_color #0c141b;
+    @define-color popover_fg_color #dbe3ed;
+    @define-color view_bg_color #0c141b;
+    @define-color view_fg_color #dbe3ed;
+    @define-color card_bg_color #0c141b;
+    @define-color card_fg_color #dbe3ed;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
