Refactor color configurations and update GTK themes for improved aesthetics and consistency across multiple files

--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #4ddad8;
-@define-color accent_fg_color #003736;
-@define-color accent_bg_color #4ddad8;
-@define-color window_bg_color #0c141b;
-@define-color window_fg_color #dbe3ed;
-@define-color headerbar_bg_color #0c141b;
-@define-color headerbar_fg_color #dbe3ed;
-@define-color popover_bg_color #0c141b;
-@define-color popover_fg_color #dbe3ed;
-@define-color view_bg_color #0c141b;
-@define-color view_fg_color #dbe3ed;
-@define-color card_bg_color #0c141b;
-@define-color card_fg_color #dbe3ed;
+@define-color accent_color #ffb1c2;
+@define-color accent_fg_color #66002b;
+@define-color accent_bg_color #ffb1c2;
+@define-color window_bg_color #1d1013;
+@define-color window_fg_color #f6dce0;
+@define-color headerbar_bg_color #1d1013;
+@define-color headerbar_fg_color #f6dce0;
+@define-color popover_bg_color #1d1013;
+@define-color popover_fg_color #f6dce0;
+@define-color view_bg_color #1d1013;
+@define-color view_fg_color #f6dce0;
+@define-color card_bg_color #1d1013;
+@define-color card_fg_color #f6dce0;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
