--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #ffb1c2;
-@define-color accent_fg_color #66002b;
-@define-color accent_bg_color #ffb1c2;
-@define-color window_bg_color #1d1013;
-@define-color window_fg_color #f6dce0;
-@define-color headerbar_bg_color #1d1013;
-@define-color headerbar_fg_color #f6dce0;
-@define-color popover_bg_color #1d1013;
-@define-color popover_fg_color #f6dce0;
-@define-color view_bg_color #1d1013;
-@define-color view_fg_color #f6dce0;
-@define-color card_bg_color #1d1013;
-@define-color card_fg_color #f6dce0;
+@define-color accent_color #00e0b2;
+@define-color accent_fg_color #00382a;
+@define-color accent_bg_color #00e0b2;
+@define-color window_bg_color #0a1611;
+@define-color window_fg_color #d8e6de;
+@define-color headerbar_bg_color #0a1611;
+@define-color headerbar_fg_color #d8e6de;
+@define-color popover_bg_color #0a1611;
+@define-color popover_fg_color #d8e6de;
+@define-color view_bg_color #0a1611;
+@define-color view_fg_color #d8e6de;
+@define-color card_bg_color #0a1611;
+@define-color card_fg_color #d8e6de;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
