--- a/config/matugen/templates/gtk-4.0/gtk.css
+++ b/config/matugen/templates/gtk-4.0/gtk.css
@@ -9,13 +9,14 @@
     @define-color accent_bg_color {{colors.primary.light.hex}};
     @define-color window_bg_color {{colors.background.light.hex}};
     @define-color window_fg_color {{colors.on_background.light.hex}};
-    @define-color headerbar_bg_color {{colors.surface_dim.light.hex}};
+    /* Use surface container ladder for clearer elevation steps */
+    @define-color headerbar_bg_color {{colors.surface_container.light.hex}};
     @define-color headerbar_fg_color {{colors.on_surface.light.hex}};
-    @define-color popover_bg_color {{colors.surface_dim.light.hex}};
+    @define-color popover_bg_color {{colors.surface_container_high.light.hex}};
     @define-color popover_fg_color {{colors.on_surface.light.hex}};
-    @define-color view_bg_color {{colors.surface.light.hex}};
+    @define-color view_bg_color {{colors.surface_container_low.light.hex}};
     @define-color view_fg_color {{colors.on_surface.light.hex}};
-    @define-color card_bg_color {{colors.surface.light.hex}};
+    @define-color card_bg_color {{colors.surface_container_low.light.hex}};
     @define-color card_fg_color {{colors.on_surface.light.hex}};
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
@@ -29,13 +30,14 @@
     @define-color accent_bg_color {{colors.primary.dark.hex}};
     @define-color window_bg_color {{colors.background.dark.hex}};
     @define-color window_fg_color {{colors.on_background.dark.hex}};
-    @define-color headerbar_bg_color {{colors.surface_dim.dark.hex}};
+    /* Use surface container ladder for clearer elevation steps */
+    @define-color headerbar_bg_color {{colors.surface_container.dark.hex}};
     @define-color headerbar_fg_color {{colors.on_surface.dark.hex}};
-    @define-color popover_bg_color {{colors.surface_dim.dark.hex}};
+    @define-color popover_bg_color {{colors.surface_container_high.dark.hex}};
     @define-color popover_fg_color {{colors.on_surface.dark.hex}};
-    @define-color view_bg_color {{colors.surface.dark.hex}};
+    @define-color view_bg_color {{colors.surface_container_low.dark.hex}};
     @define-color view_fg_color {{colors.on_surface.dark.hex}};
-    @define-color card_bg_color {{colors.surface.dark.hex}};
+    @define-color card_bg_color {{colors.surface_container_low.dark.hex}};
     @define-color card_fg_color {{colors.on_surface.dark.hex}};
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
