config: Revise color schemes across multiple configuration files for a cohesive dark theme
- Updated color values in kdeglobals, fuzzel_theme.ini, ghostty colors, and gtk.css files to enhance visual consistency.
- Adjusted Hyprland color settings for improved aesthetics and user experience.
- Modified layout and notification components to align with the new color scheme, ensuring a unified look throughout the interface.

--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,20 +3,20 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #75d7ca;
-@define-color accent_fg_color #003732;
-@define-color accent_bg_color #75d7ca;
-@define-color window_bg_color #171118;
-@define-color window_fg_color #ebdfe9;
+@define-color accent_color #88d3d5;
+@define-color accent_fg_color #003738;
+@define-color accent_bg_color #88d3d5;
+@define-color window_bg_color #101414;
+@define-color window_fg_color #e0e3e2;
 /* Use surface container ladder for clearer elevation steps */
-@define-color headerbar_bg_color #241e25;
-@define-color headerbar_fg_color #ebdfe9;
-@define-color popover_bg_color #2e282f;
-@define-color popover_fg_color #ebdfe9;
-@define-color view_bg_color #201a21;
-@define-color view_fg_color #ebdfe9;
-@define-color card_bg_color #201a21;
-@define-color card_fg_color #ebdfe9;
+@define-color headerbar_bg_color #1c2020;
+@define-color headerbar_fg_color #e0e3e2;
+@define-color popover_bg_color #272b2b;
+@define-color popover_fg_color #e0e3e2;
+@define-color view_bg_color #181c1c;
+@define-color view_fg_color #e0e3e2;
+@define-color card_bg_color #181c1c;
+@define-color card_fg_color #e0e3e2;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
