--- a/config/gtk-4.0/gtk.css
+++ b/config/gtk-4.0/gtk.css
@@ -4,20 +4,20 @@
 */
 
 @media (prefers-color-scheme: light) {
-    @define-color accent_color #006a61;
+    @define-color accent_color #004d4f;
     @define-color accent_fg_color #ffffff;
-    @define-color accent_bg_color #006a61;
-    @define-color window_bg_color #fff7fb;
-    @define-color window_fg_color #201a21;
+    @define-color accent_bg_color #004d4f;
+    @define-color window_bg_color #f7faf9;
+    @define-color window_fg_color #181c1c;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #f7eaf5;
-    @define-color headerbar_fg_color #201a21;
-    @define-color popover_bg_color #f1e5ef;
-    @define-color popover_fg_color #201a21;
-    @define-color view_bg_color #fdf0fa;
-    @define-color view_fg_color #201a21;
-    @define-color card_bg_color #fdf0fa;
-    @define-color card_fg_color #201a21;
+    @define-color headerbar_bg_color #eceeee;
+    @define-color headerbar_fg_color #181c1c;
+    @define-color popover_bg_color #e6e9e8;
+    @define-color popover_fg_color #181c1c;
+    @define-color view_bg_color #f1f4f3;
+    @define-color view_fg_color #181c1c;
+    @define-color card_bg_color #f1f4f3;
+    @define-color card_fg_color #181c1c;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
@@ -25,20 +25,20 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    @define-color accent_color #75d7ca;
-    @define-color accent_fg_color #003732;
-    @define-color accent_bg_color #75d7ca;
-    @define-color window_bg_color #171118;
-    @define-color window_fg_color #ebdfe9;
+    @define-color accent_color #88d3d5;
+    @define-color accent_fg_color #003738;
+    @define-color accent_bg_color #88d3d5;
+    @define-color window_bg_color #101414;
+    @define-color window_fg_color #e0e3e2;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #241e25;
-    @define-color headerbar_fg_color #ebdfe9;
-    @define-color popover_bg_color #2e282f;
-    @define-color popover_fg_color #ebdfe9;
-    @define-color view_bg_color #201a21;
-    @define-color view_fg_color #ebdfe9;
-    @define-color card_bg_color #201a21;
-    @define-color card_fg_color #ebdfe9;
+    @define-color headerbar_bg_color #1c2020;
+    @define-color headerbar_fg_color #e0e3e2;
+    @define-color popover_bg_color #272b2b;
+    @define-color popover_fg_color #e0e3e2;
+    @define-color view_bg_color #181c1c;
+    @define-color view_fg_color #e0e3e2;
+    @define-color card_bg_color #181c1c;
+    @define-color card_fg_color #e0e3e2;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
